--- a/app/src/main/res/layout/custom_popup.xml
+++ b/app/src/main/res/layout/custom_popup.xml
@@ -5,7 +5,7 @@
     android:layout_width="350dp"
     android:layout_height="480dp"
     android:orientation="vertical"
-    android:background="@color/grey"
+    android:background="@color/gray"
     android:padding="5dp"
     android:layout_gravity="center"
     >
