--- a/app/src/main/res/layout/activity_highscore.xml
+++ b/app/src/main/res/layout/activity_highscore.xml
@@ -37,9 +37,8 @@
         android:id="@+id/highscoreList"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/textView"
+        android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true">
-    </ListView>
+        android:layout_below="@+id/textView"></ListView>
 
 </RelativeLayout>
