--- a/app/src/main/res/menu/options.xml
+++ b/app/src/main/res/menu/options.xml
@@ -7,6 +7,9 @@
     />
 
     <item
+        android:id="@+id/settingsItem"
+        android:title="Settings" />
+    <item
         android:title="Exit"
         android:id="@+id/exitItem" />
 
